Fix button style on mobile

--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -12,7 +12,7 @@
   color: white;
   background-color: #3d87ce;
   padding: .8rem 1.6rem;
-  margin: 0 0.8rem;
+  margin: 0.4rem 0.8rem;
   border-radius: 4px;
   box-sizing: border-box;
   border-bottom: 1px solid #3d87ce;
